--- a/www/css/app.css
+++ b/www/css/app.css
@@ -53,6 +53,9 @@ button.punch
     border-top: #8C3838;
     box-shadow: inset 0 1px 10px 1px #EE5C5C, 0px 1px 0 #4D1D1D, 0 6px 0px #531F1F, 0 8px 4px 1px #111111;
     text-shadow: 0px -1px 1px #4D1E1E;
+    animation-name: redPulse;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
 }
 
 .punch.red:hover, .punch.red:active {
@@ -69,5 +72,20 @@ li button
 {
     height: 20%;
     width: 20%;
+}
+
+@keyframes redPulse {
+from {
+    background-color: #A84141;
+    box-shadow: 0 0 9px #333;
+}
+50% {
+    background-color: #BD0909;
+    box-shadow: 0 0 20px #BD0909;
+}
+to {
+    background-color: #A84141;
+    box-shadow: 0 0 9px #333;
+}
 }
 
