--- a/www/css/app.css
+++ b/www/css/app.css
@@ -14,6 +14,7 @@ html,body
     moz-box-sizing: border-box;
     webkit-box-sizing: border-box;
 }
+
 body
 {
     background: radial-gradient(black 15%, transparent 16%) 0 0,
@@ -23,7 +24,20 @@ body
     background-color: #282828;
     background-size: 16px 16px;
     font-size: 100%;
+    overflow: hidden;
 }
+button {
+    width: 25%;
+    height: 20%;
+    margin-left: 4%;
+    margin-right: 4%;
+    margin-top: 3%;
+    margin-bottom: 2%;
+    float: left;
+    display: block;
+    font: bold 150% "helvetica neue", helvetica, arial, sans-serif;
+}
+
 button.punch
 {
     background: #4162a8;
@@ -35,14 +49,10 @@ button.punch
     border-top: 1px solid #38538c;
     box-shadow: inset 0 1px 10px 1px #5c8bee, 0px 1px 0 #1d2c4d, 0 6px 0px #1f3053, 0 8px 4px 1px #111111;
     color: #fff;
-    font: bold 1em/1 "helvetica neue", helvetica, arial, sans-serif;
-    height: 20%;
     margin-bottom: 10px;
     padding: 10px 0 12px 0;
-    position: absolute;
     text-align: center;
     text-shadow: 0px -1px 1px #1e2d4d;
-    width: 90%;
 }
 
 .punch.red {
@@ -67,11 +77,6 @@ button.punch:hover, button.punch:active
 {
     box-shadow: inset 0 0px 20px 1px #87adff, 0px 1px 0 #1d2c4d, 0 6px 0px #1f3053, 0 8px 4px 1px #111111;
     cursor: pointer;
-}
-li button
-{
-    height: 20%;
-    width: 20%;
 }
 
 @keyframes redPulse {
