--- a/www/css/app.css
+++ b/www/css/app.css
@@ -1,3 +1,9 @@
+@import "install-button.css";
+@import "../js/lib/layouts/css/layouts.css";
+@import "fonts.css";
+* {
+  overflow: hidden;
+}
 html, body
 {
     height: 100%;
@@ -6,18 +12,44 @@ html, body
     padding: 0;
 }
 
+body {
+    font-family: 'MozTTLight', Verdana, sans-serif;
+}
+
+h1 {
+    font: 2.2rem/4.8rem "Open Sans", Sans-serif;
+}
+
+x-view .contents {
+    padding: 1em;
+}
+
+x-view.foo {
+    background-color: #dddddd;
+}
+
+x-view .contents h1 {
+    margin: 0;
+}
+
+x-listview.list li:before {
+    content: ' ';
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    background: url(../img/glyphicons-halflings.png) no-repeat -95px -2px;
+    margin-right: 5px;
+    vertical-align: middle;
+}
+
+
 body
 {
-    background: radial-gradient(black 15%, transparent 16%) 0 0,
- radial-gradient(black 15%, transparent 16%) 8px 8px,
- radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
- radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
-    background-color: #282828;
-    background-size: 16px 16px;
     font-size: 100%;
     overflow: hidden;
 }
-button {
+
+.home button {
     vertical-align: top;
     width: 25%;
     padding: 0;
@@ -28,10 +60,6 @@ button {
     float: left;
     display: inline-block;
     font: bold 120% "helvetica neue", helvetica, arial, sans-serif;
-}
-
-button.punch
-{
     background: #4162a8;
     background-clip: padding-box;
     border-bottom: 1px solid #151e33;
@@ -86,3 +114,62 @@ to {
 }
 }
 
+#screen_choose {
+  display: none;
+}
+
+#screen_about {
+  display: none;
+}
+
+#screen_timers,
+#screen_about,
+#screen_choose {
+    display: block;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.home, .config {
+    height: (100% - 32px);
+    background: radial-gradient(black 15%, transparent 16%) 0 0,
+ radial-gradient(black 15%, transparent 16%) 8px 8px,
+ radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+ radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
+    background-color: #282828;
+    background-size: 16px 16px;
+}
+
+x-view.app .contents {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+.timer-footer {
+    background: -moz-linear-gradient(center top , rgb(50, 50, 50), rgb(25, 25, 25)) repeat scroll 0% 0% transparent;
+    height: 32px;
+}
+
+.config {
+    /*display: none;*/
+}
+
+#time-label {
+    text-align: center;
+    font-size: 500%;
+    color: white;
+}
+
+.num {
+    width: 30%;
+    font-size: 300%;
+}
+
+.numb {
+    width: 30%;
+    font-size: 200%;
+}
